updater part 2 for CRUD
